<resources>
    <string name="app_name">AMessage</string>
    <!-- AMLogin and AMCreate -->
    <string name="welcome_message">AMessage</string>
     <string name="username_label">Username</string> 
    <string name="email_label">E-Mail</string>
    <string name="password_label">Password</string> 
    <string name="phonenumber_label">Phonenumber</string>
    <string name="create_user">Create User</string> 
    <string name="login_button">Login</string>
    <string name="login_amessage">Login to AMessage</string>
    <string name="switch_login">Login Page</string>
    <string name="switch_create">Create Page</string>
    <!-- AMOverview -->
    <string name="logout_button">Log Out</string>
    <string name="new_message_button">+</string>
    <string name="remove_friend_button">-</string>
    <!-- AMNewmessage -->
    <string name="input_msg">message here</string>
    <string name="reciever_msg">email/phone</string>
    <!--AMChat -->
    <string name="send_button">Send</string>
    <string name="send_location">Send Location</string>
    <string name="send_picture">Send Picture</string>
<<<<<<< HEAD
     <string name="send_audio">Send Audio</string>
=======
     
    <string name="send_audio">Send Audio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string> 

>>>>>>> master
</resources>