<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.AMLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="@string/welcome_message" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/username_label"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:layout_below="@+id/welcome_message"
            android:layout_alignLeft="@+id/email_field"
            android:layout_alignStart="@+id/email_field"
            android:layout_marginTop="144dp" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:layout_marginTop="33dp"
            android:layout_below="@+id/username_field"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/phone_number_field"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="phone"
            android:textAlignment="center"
            android:maxLength="8"
            android:hint="@string/phonenumber_label"
            android:layout_below="@+id/email_field"
            android:layout_alignLeft="@+id/email_field"
            android:layout_alignStart="@+id/email_field"
            android:layout_marginTop="33dp"
            android:layout_alignRight="@+id/email_field"
            android:layout_alignEnd="@+id/email_field" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/create_user"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp" />
    </RelativeLayout>

</FrameLayout>
