<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.AMLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="@string/welcome_message" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/username_label"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:layout_below="@+id/welcome_message"
            android:layout_alignLeft="@+id/password_field"
            android:layout_alignStart="@+id/password_field"
            android:layout_marginTop="144dp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_marginTop="33dp"
            android:layout_below="@+id/username_field"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_below="@+id/password_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp" />
    </RelativeLayout>

</FrameLayout>
